@@ -1,3 +1,6 @@
+2004-06-17  Karl Runge <runge@karlrunge.com>
+	* simple ~/.x11vncrc config file support, -rc, -norc
+
 2004-06-12  Karl Runge <runge@karlrunge.com>
 	* add -clear_mods -clear_keys for (rare) case where keys are
 	  not being released (e.g. Ctrl-C x11vnc thru x11vnc).
